Minor improvements to document images view

--- a/src/app/features/document-annotations/components/document-page/document-page.component.scss
+++ b/src/app/features/document-annotations/components/document-page/document-page.component.scss
@@ -3,6 +3,9 @@
 .container {
   border-radius: $default-border-radius;
   margin: $default-margin;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   img {
     border: 1px solid #ccc;
