--- a/src/app/features/document-annotations/components/document-page/document-page.component.html
+++ b/src/app/features/document-annotations/components/document-page/document-page.component.html
@@ -1,4 +1,4 @@
-<fieldset class="container">
-  <img [src]="page().imageUrl" alt="Изображение страницы документа" clwZoomableImage/>
-  <clw-page-annotations [annotations]="page().annotations || [{number: 1, text: 'Annotation 1'}, {number: 2, text: 'Annotation 2'}]"></clw-page-annotations>
-</fieldset>
+<div class="container">
+  <img [src]="page()?.imageUrl" alt="Изображение страницы документа" clwZoomableImage/>
+  <clw-annotations [annotations]="page()?.annotations || []" (annotationsChange)="updateAnnotations($event)"></clw-annotations>
+</div>
